--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ quarkus.native.quick-build=true
 # Remove deprecated settings
 quarkus.package.type=native
 quarkus.native.sources-only=false
+quarkus.native.container-build=true
+quarkus.lambda.enable-polling-jvm-mode=true
+quarkus.native.additional-build-args=-glibc
+
+
